--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "learn-starter",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,9 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "gray-matter": "^4.0.2",
-    "next": "^10.0.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "next": "latest",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   }
 }
