--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "remark-html": "^15.0.1",
     "sass": "^1.47.0",
     "tailwindcss": "^3.0.12"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
+    "typescript": "^4.5.4"
   }
 }
